# rider_finance

./: .dockerignore  .gitignore  BROADCAST_TICKET_IMPLEMENTATION.md  CACHE_IMPLEMENTATION_PLAN.md  COMMIT_INICIAL.md  DASHBOARD_CACHE_CHECKLIST.md  DASHBOARD_COST_REDUCTION.md  Dockerfile  FUNCTIONS.md  TESTES.md  UTC_STANDARDIZATION_PLAN.md  apaga_bd.sql  dev-help-config.json  docker-compose.yml  nginx.conf  package-lock.json  start-cloudflare.bat  start.sh
backend/: .dockerignore  Cargo.toml  DATABASE_README.md  Dockerfile  IMPLEMENTATION_STEPS.MD  README-local.md  README.md  TESTES.md  cargo_test_output.txt  db-manager.ps1  diesel.toml  docker-entrypoint.sh  run.sh
backend/migrations/00001_add_cascade_user_fks/: down.sql  up.sql
backend/migrations/000_baseline/: README.md  down.sql  up.sql
backend/migrations/2025-08-06-034356_init_all_tables/: down.sql  up.sql
backend/migrations/2025-08-06-041412_init_all_tables/: down.sql  up.sql
backend/migrations/2025-08-06-042538_senha_nullable/: down.sql  up.sql
backend/migrations/2025-08-07-ultima_tentativa_redefinicao/: down.sql  up.sql
backend/migrations/2025-09-07-224404_convert_timestamp_to_timestamptz/: down.sql  up.sql
backend/migrations/2025-09-09-202430_fix_timezone_timestamps/: down.sql  up.sql
backend/migrations/2025-09-09-202431_add_unique_usuario_admin/: down.sql  up.sql
backend/migrations/2025-09-10-000000_add_km_to_transacoes/: down.sql  up.sql
backend/migrations/2025-09-11-120000_fix_km_column_type/: down.sql  up.sql
backend/migrations/20250808000000_add_asaas_fields_to_usuarios/: down.sql  up.sql
backend/migrations/20250809_add_cpfCnpj_to_usuarios/: down.sql  up.sql
backend/migrations/20250810_add_webhook_fields_to_assinaturas/: down.sql  fix_valor_tipo.sql  up.sql
backend/migrations/20250810_fix_valor_integer/: up.sql
backend/migrations/20250810_fix_valor_to_integer/: down.sql
backend/migrations/20250811_drop_categoria_eh_columns/: down.sql  up.sql
backend/src/: lib.rs  main.rs  schema.rs
backend/src/api/: auth.rs
backend/src/cache/: dashboard.rs  mod.rs  transacao.rs  types.rs
backend/src/db/: mod.rs
backend/src/models/: admin.rs  assinatura.rs  categoria.rs  configuracao.rs  meta.rs  mod.rs  sessao_trabalho.rs  transacao.rs  usuario.rs
backend/src/services/: cpf.rs  meta_metas_com_transacoes.rs  meta_metas_com_transacoes_handler.rs  meta_metas_com_transacoes_test.rs  mod.rs  usuario.rs
backend/src/services/admin/: mod.rs
backend/src/services/assinatura/: .1.code-workspace  asaas.rs  checkout.rs  mod.rs  verify.rs
backend/src/services/auth/: get_me.rs  login.rs  logout.rs  mod.rs  register.rs  register_pending.rs  request_password_reset.rs  reset_password.rs  validate_token.rs
backend/src/test/: service_auth.rs
backend/src/test_utils/: user.rs
backend/src/utils/: date_utils.rs  mod.rs  relatorio.rs
backend/tests/: auth.rs
(+221 files in other folders)
