[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
lettre = "0.11"
lettre_email = "0.9"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8.4", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.0.3", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "2.0.0"
ulid = "1.0"
anyhow = "1.0"
thiserror = "2.0.11"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15.1"
hyper = "1.6.0"
tower = { version = "0.5.2", features = ["util"] }
jsonwebtoken = "9.3.1"