[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serial_test = "3.2.0"
[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10", features = ["typed-header", "cookie"] }
base64 = "0.22.1"
bcrypt = "0.17.0"
captcha = "1.0.0"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.0.3", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "2.0.0"
dotenvy = "0.15"
hyper = "1.6.0"
jsonwebtoken = "9.3.1"
lazy_static = "1.4.0"
lettre = "0.11"
lettre_email = "0.9"
moka = { version = "0.12", features = ["future"] }
mutex = "1.0.2"
once_cell = "1.19"
printpdf = "0.8.2"
rand = "0.9.2"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.16"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
tracing = "0.1"
ulid = "1.0"
umya-spreadsheet = "2.3.2"
uuid = { version = "1.18.1", features = ["v4"] }
